# aideon-desktop

./: AGENTS.MD  AGENTS.md  ARCHITECTURE-BOUNDARY.MD  ARCHITECTURE-BOUNDARY.md  CHANGELOG.MD  CHANGELOG.md  CONTRIBUTING.MD  CONTRIBUTING.md  Cargo.toml  LICENSE  README.MD  README.md  REPLIT.md  SECURITY.md  TASKS.MD  eslint.config.mjs  package.json  pnpm-lock.yaml  replit.md  sonar-project.properties  vitest.config.mjs
.github/workflows/: pipeline.yml  repo-maintenance.yml  reusable-release.yml  semantic-release.yml  sonarqube-monorepo.yml
aideon_xtask/: Cargo.toml
aideon_xtask/src/: main.rs
app/AideonDesktop/: DESIGN.md  components.json  next.config.mjs  package.json  tsconfig.json
crates/chrona/: Cargo.toml  DESIGN.MD  DESIGN.md  README.MD  README.md
crates/continuum/: Cargo.toml  DESIGN.md  README.MD  README.md
crates/desktop/: Cargo.toml  DESIGN.MD  DESIGN.md  README.MD  README.md  tauri.conf.json
crates/desktop/src/: app.rs  (+12 more)
crates/engine/: Cargo.toml
crates/metis/: Cargo.toml  DESIGN.md  README.MD  README.md
crates/mneme/: Cargo.toml  DESIGN.md  README.MD  README.md
crates/mneme/src/: api.rs  datastore.rs  db.rs  error.rs  lib.rs  ops.rs  store.rs
crates/mneme/src/migration/: m20250101_000001_init.rs  mod.rs
crates/mneme/tests/: change_feed_and_validation.rs  export_import.rs  list_entities.rs  reexports.rs  scenario_metadata.rs  sqlite_migrations.rs  time_resolution.rs
crates/mneme_core/: Cargo.toml
crates/mneme_core/src/: api.rs  error.rs  ids.rs  lib.rs  schema.rs  schema_manifest.rs  time.rs  value.rs
crates/mneme_store/: Cargo.toml  build.rs  schema_manifest.json
crates/mneme_store/src/: config.rs  datastore.rs  db.rs  lib.rs  schema_manifest.rs  store.rs
crates/mneme_store/src/migration/: m20250101_000001_init.rs  m20251229_000002_ops_scenario.rs  mod.rs
crates/mneme_store/tests/: analytics_stats.rs  change_feed_and_validation.rs  computed_cache.rs  config_pool.rs  cross_db_equivalence.rs  design_parity.rs  explain_api.rs  export_import.rs  job_queue_limits.rs  list_entities.rs  retention_and_manifest.rs  scenario_metadata.rs  sqlite_migrations.rs  store_smoke.rs  time_resolution.rs
crates/praxis/: Cargo.toml  DESIGN-OLD.MD  DESIGN-OLD.md  DESIGN.MD  DESIGN.md  DESIGN_OLD.md  README.MD  README.md
crates/praxis/src/: canvas.rs  dataset.rs  error.rs  graph.rs  lib.rs  meta_seed.rs  temporal.rs
crates/praxis/src/engine/: init.rs  mod.rs  ops.rs
crates/praxis/src/meta/: config.rs  mod.rs  registry.rs  types.rs  validation.rs
crates/praxis/tests/: merge_flow.rs  storage_persistence.rs  temporal_ops.rs
docs/: ANALYTICS.MD  ANALYTICS.md  CODING-STANDARDS.MD  CODING-STANDARDS.md  CODING_STANDARDS.md  COMMANDS.MD  COMMANDS.md  CONTRACTS-AND-SCHEMAS.MD  CONTRACTS-AND-SCHEMAS.md  DESIGN-STRATEGY-TO-EXECUTION.md  DESIGN-SYSTEM.md  DESIGN.MD  DESIGN.md  DOMAIN-MODEL.md  GETTING-STARTED.MD  GETTING-STARTED.md  INTERACTION-PATTERNS.md  PRAXIS-DESIGN-SYSTEM-BLOCKS.MD  PRAXIS-DESIGN-SYSTEM-BLOCKS.md  RECTIFICATION-PLAN.MD  RECTIFICATION-PLAN.md  ROADMAP.MD  ROADMAP.md  RectificationPlan.md  TAURI-CAPABILITIES.MD  TAURI-CAPABILITIES.md  TAURI-CLIENT-SERVER-PIVOT.MD  TAURI-CLIENT-SERVER-PIVOT.md  TEMPLATE-SCREEN.MD  TEMPLATE-SCREEN.md  TESTING-STRATEGY.MD  TESTING-STRATEGY.md  UX-DESIGN.md  UX-SHELL.md  UX-UPDATES.md  commands.md  getting-started.md  testing-strategy.md  ux-shell.md
docs/adr/: 0005-metamodel-as-graph-dataset.md  0006-sqlite-storage-layer.md
docs/contracts/: ipc-manifest.json
docs/data/: README.MD  README.md
docs/meta/: README.MD  README.md
docs/storage/: SQLITE.MD  SQLITE.md  sqlite.md
scripts/: issues.py
(+244 files in other folders)
