[workspace]
resolver = "2"
members = [
  "crates/aideon_praxis_facade",
  "crates/desktop",
  "crates/engine",
  "crates/chrona",
  "crates/metis",
  "crates/continuum",
  "crates/mneme",
  "crates/mneme_core",
  "crates/mneme_store",
  "aideon_xtask"
]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Shared dependencies can be declared here when the crates start sharing code.
