[package]
name = "aideon_mneme"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
sea-orm = { version = "2.0.0-rc.19", features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlx-sqlite",
  "sqlx-postgres",
  "sqlx-mysql",
] }
sea-orm-migration = { version = "2.0.0-rc.19", features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
  "sqlx-postgres",
  "sqlx-mysql",
] }
uuid = { version = "1", features = ["v4"] }
ulid = "1"
once_cell = "1"
blake3 = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3.23"
