[package]
name = "aideon_mneme_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
ulid = "1"
once_cell = "1"
tokio = { version = "1", features = ["sync"] }
