[package]
name = "aideon_mneme_store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
aideon_mneme_core = { path = "../mneme_core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
sea-orm = { version = "2.0.0-rc.27", features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlx-sqlite",
  "sqlx-postgres",
  "sqlx-mysql",
] }
sea-orm-migration = { version = "2.0.0-rc.27", features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
  "sqlx-postgres",
  "sqlx-mysql",
] }
blake3 = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
unicode-normalization = "0.1"
log = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3.24"
